# petty

./: .pre-commit-config.yaml  Cargo.toml  README.md
spec/: 0001-prd.md
src/: main.rs  pet.rs  state.rs  ui.rs
