[package]
name = "petty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.31"
ratatui = { version = "0.29.0", features = ["crossterm"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
chrono = { version = "0.4.42", features = ["serde"] }
libc = "0.2.175"
